--- a/app/src/main/res/menu/menu_detalhes_produto.xml
+++ b/app/src/main/res/menu/menu_detalhes_produto.xml
@@ -11,6 +11,6 @@
     <item
         android:id="@+id/menu_detalhes_produto_remover"
         android:icon="@drawable/ic_action_remove"
-        android:title="Editar"
+        android:title="Remover"
         app:showAsAction="ifRoom" />
 </menu>
